# scraped

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/scraped/: tools.html  util.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: scraped.rst.txt
_sources/module_docs/scraped/: tools.rst.txt  util.rst.txt
module_docs/: scraped.html
module_docs/scraped/: tools.html  util.html
scraped/: __init__.py  tools.py  util.py
