[metadata]
name = scraped
version = 0.0.4
url = https://github.com/thorwhalen/scraped
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Tools for scraping
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = scraped

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	graze
	scrapy
	config2py

